# SDL_Wrapper

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  CMakeUserPresets.json  README.md  README_RU.md  build_android_all.bat
app/: build.gradle
app/libs/: SDL3_image-3.2.4.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
cmake/: AndroidOptimizationFlags.cmake  AndroidTargetOptimization.cmake  AppAndroid.cmake  AppWindows.cmake  Platforms.cmake  SDLWrapperConfig.cmake.in  SDL_wrapperConfig.cmake.in
include/: EventRegistrator.hpp
include/SDLWrapper/: Clock.hpp  Log.hpp  Names.hpp  SDL3GlobalMeneger.hpp  SDLWrapper.hpp  Texture.hpp
include/SDLWrapper/Audio/: Audio.hpp  AudioDevice.hpp  Sound.hpp  SoundSettings.hpp
include/SDLWrapper/DrawTransformObjects/: CircleShape.hpp  EllipseShape.hpp  PolygonShape.hpp  RectangleShape.hpp  Sprite.hpp
include/SDLWrapper/Math/: Colors.hpp  Convert.hpp  Matrix3x3.hpp  Operators.hpp  VectorMath.hpp
include/SDLWrapper/ObjectBase/: Drawable.hpp  Shape.hpp  Transformable.hpp
include/SDLWrapper/Renders/: RenderMeneger.hpp  RenderTarget.hpp  RenderWindow.hpp  View.hpp
include/SDL_wrapper/: Core.hpp  Mixer.hpp  SDL3GlobalMeneger.hpp  SDLWrapper.hpp
include/SDL_wrapper/Audio/: SoundSettings.hpp
include/SDL_wrapper/Core/: EventRegistrator.hpp
include/SDL_wrapper/Core/Math/: Colors.hpp
include/SDL_wrapper/DrawTransformObjects/: CircleShape.hpp  EllipseShape.hpp  Sprite.hpp
include/SDL_wrapper/Graphics/: Texture.hpp
include/SDL_wrapper/Graphics/DrawTransformObjects/: CircleShape.hpp  PolygonShape.hpp
include/SDL_wrapper/Graphics/ObjectBase/: Shape.hpp  Transformable.hpp
include/SDL_wrapper/Graphics/Renders/: RenderTarget.hpp  View.hpp
include/SDL_wrapper/Math/: Matrix3x3.hpp  VectorMath.hpp
include/SDL_wrapper/Mixer/: Audio.hpp  AudioDevice.hpp  SoundSettings.hpp
include/SDL_wrapper/Mixer/Detail/: MixerRegistry.hpp
include/SDL_wrapper/ObjectBase/: Shape.hpp
include/SDL_wrapper/Renders/: RenderTarget.hpp  VideoMode.hpp  View.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/: FileWorker.hpp  Graphics.hpp  Rect.hpp  SDLWrapper.hpp  Texture.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/Core/: Clock.hpp  Export.hpp  FileWorker.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/Core/Math/: Matrix3x3.hpp  VectorMath.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/DrawTransformObjects/: PolygonShape.hpp  RectangleShape.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/Math/: Colors.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/Mixer/: Export.hpp  Sound.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/ObjectBase/: Transformable.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/Renders/: RenderWindow.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/audio/: Export.hpp  SDL3MixerMeneger.hpp  Sound.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/graphics/: Export.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/graphics/Detail/: RendererRegistry.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/graphics/DrawTransformObjects/: EllipseShape.hpp  RectangleShape.hpp  Sprite.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/graphics/ObjectBase/: Drawable.hpp
install/msvc-x64-win-mt/include/SDL_wrapper/graphics/Renders/: RenderWindow.hpp  VideoMode.hpp
install/msvc-x64-win-mt/lib/: SDL_wrapper-Core-d.lib  SDL_wrapper-Core.lib  SDL_wrapper-Mixer-d.lib  SDL_wrapper-Mixer.lib  SDL_wrapper-audio-d.lib  SDL_wrapper-audio.lib  SDL_wrapper-graphics-d.lib  SDL_wrapper-graphics.lib
install/msvc-x64-win-mt/lib/cmake/SDL_wrapper/: SDL_wrapperConfig.cmake  SDL_wrapperTargets-debug.cmake  SDL_wrapperTargets-release.cmake  SDL_wrapperTargets.cmake
src/: Audio.cpp  AudioDevice.cpp  CircleShape.cpp  Clock.cpp  Colors.cpp  Convert.cpp  EllipseShape.cpp  FileWorker.cpp  GlobalMeneger.hpp  Log.cpp  Matrix3x3.cpp  MixerRegistry.cpp  Operators.cpp  PolygonShape.cpp  RectangleShape.cpp  RenderMeneger.cpp  RenderTarget.cpp  RenderWindow.cpp  RendererRegistry.cpp  SDL3GlobalMeneger.cpp  SDL3MixerMeneger.cpp  Shape.cpp  Sound.cpp  SoundSettings.cpp  Sprite.cpp  Texture.cpp  Transformable.cpp  VectorMath.cpp  VideoMode.cpp  View.cpp  main.cpp
src/SDLWrapper/: Log.hpp  Texture.hpp
src/SDLWrapper/DrawTransformObjects/: CircleShape.hpp  EllipseShape.hpp  RectangleShape.hpp  Sprite.hpp
src/SDLWrapper/Math/: Colors.hpp  Convert.hpp  Matrix3x3.hpp  Operators.hpp  VectorMath.hpp
src/SDLWrapper/ObjectBase/: Shape.hpp  Transformable.hpp
src/SDLWrapper/Renders/: RenderMeneger.hpp  RenderTarget.hpp  RenderWindow.hpp  VideoMode.hpp  View.hpp
